// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List renders correctly 1`] = `
<DocumentFragment>
  <ul
    class="c-list"
    data-name="list"
  >
    <li
      class="c-list__item"
      data-name="list-item"
    >
      lorem
    </li>
    <li
      class="c-list__item"
      data-name="list-item"
    >
      ipsum
    </li>
    <li
      class="c-list__item"
      data-name="list-item"
    >
      dolor
    </li>
  </ul>
</DocumentFragment>
`;

exports[`List renders correctly an inline list 1`] = `
<DocumentFragment>
  <ul
    class="c-list c-list--inline"
    data-name="list"
  >
    <li
      class="c-list__item"
      data-name="list-item"
    >
      lorem
    </li>
    <li
      class="c-list__item"
      data-name="list-item"
    >
      ipsum
    </li>
    <li
      class="c-list__item"
      data-name="list-item"
    >
      dolor
    </li>
  </ul>
</DocumentFragment>
`;

exports[`List renders correctly an ordered list 1`] = `
<DocumentFragment>
  <ol
    class="c-list c-list--ordered"
    data-name="list"
  >
    <li
      class="c-list__item"
      data-name="list-item"
    >
      lorem
    </li>
    <li
      class="c-list__item"
      data-name="list-item"
    >
      ipsum
    </li>
    <li
      class="c-list__item"
      data-name="list-item"
    >
      dolor
    </li>
  </ol>
</DocumentFragment>
`;

exports[`List renders correctly an unstyled list 1`] = `
<DocumentFragment>
  <ul
    class="c-list c-list--unstyled"
    data-name="list"
  >
    <li
      class="c-list__item"
      data-name="list-item"
    >
      lorem
    </li>
    <li
      class="c-list__item"
      data-name="list-item"
    >
      ipsum
    </li>
    <li
      class="c-list__item"
      data-name="list-item"
    >
      dolor
    </li>
  </ul>
</DocumentFragment>
`;
